y.output
Terminals unused in grammar

   DEF


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: ID $@1 MK_SEMICOLON program_body END ID

    3 $@2: /* empty */

    4 program_body: opt_decl_list opt_func_decl_list $@2 compound_stmt

    5 opt_decl_list: decl_list
    6              | /* empty */

    7 decl_list: decl_list decl
    8          | decl

    9 decl: VAR id_list MK_COLON scalar_type MK_SEMICOLON
   10     | VAR id_list MK_COLON array_type MK_SEMICOLON
   11     | VAR id_list MK_COLON literal_const MK_SEMICOLON

   12 literal_const: INT_CONST
   13              | OP_SUB INT_CONST
   14              | FLOAT_CONST
   15              | OP_SUB FLOAT_CONST
   16              | SCIENTIFIC
   17              | OP_SUB SCIENTIFIC
   18              | STR_CONST
   19              | TRUE
   20              | FALSE

   21 opt_func_decl_list: func_decl_list
   22                   | /* empty */

   23 func_decl_list: func_decl_list func_decl
   24               | func_decl

   25 $@3: /* empty */

   26 $@4: /* empty */

   27 func_decl: ID MK_LPAREN opt_param_list $@3 MK_RPAREN ret_type $@4 MK_SEMICOLON compound_stmt END ID

   28 opt_param_list: param_list
   29               | /* empty */

   30 param_list: param_list MK_SEMICOLON param
   31           | param

   32 param: id_list MK_COLON type

   33 id_list: id_list MK_COMMA ID
   34        | ID

   35 ret_type: MK_COLON scalar_type
   36         | /* empty */

   37 type: scalar_type
   38     | array_type

   39 scalar_type: INTEGER
   40            | REAL
   41            | BOOLEAN
   42            | STRING

   43 array_type: ARRAY array_index TO array_index OF type

   44 array_index: INT_CONST
   45            | OP_SUB INT_CONST

   46 stmt: compound_stmt
   47     | simple_stmt
   48     | cond_stmt
   49     | while_stmt
   50     | for_stmt
   51     | return_stmt
   52     | proc_call_stmt

   53 $@5: /* empty */

   54 compound_stmt: $@5 BEG opt_decl_list opt_stmt_list END

   55 opt_stmt_list: stmt_list
   56              | /* empty */

   57 stmt_list: stmt_list stmt
   58          | stmt

   59 simple_stmt: var_ref OP_ASSIGN boolean_expr MK_SEMICOLON
   60            | PRINT boolean_expr MK_SEMICOLON
   61            | READ boolean_expr MK_SEMICOLON

   62 proc_call_stmt: ID MK_LPAREN opt_boolean_expr_list MK_RPAREN MK_SEMICOLON

   63 $@6: /* empty */

   64 cond_stmt: IF condition THEN opt_stmt_list ELSE $@6 opt_stmt_list END IF
   65          | IF condition THEN opt_stmt_list END IF

   66 condition: boolean_expr

   67 $@7: /* empty */

   68 while_stmt: WHILE condition_while DO opt_stmt_list $@7 END DO

   69 condition_while: boolean_expr

   70 $@8: /* empty */

   71 $@9: /* empty */

   72 for_stmt: FOR ID $@8 OP_ASSIGN loop_param TO loop_param $@9 DO opt_stmt_list END DO

   73 loop_param: INT_CONST

   74 return_stmt: RETURN boolean_expr MK_SEMICOLON

   75 opt_boolean_expr_list: boolean_expr_list
   76                      | /* empty */

   77 boolean_expr_list: boolean_expr_list MK_COMMA boolean_expr
   78                  | boolean_expr

   79 boolean_expr: boolean_expr OP_OR boolean_term
   80             | boolean_term

   81 boolean_term: boolean_term OP_AND boolean_factor
   82             | boolean_factor

   83 boolean_factor: OP_NOT boolean_factor
   84               | relop_expr

   85 relop_expr: expr rel_op expr
   86           | expr

   87 rel_op: OP_LT
   88       | OP_LE
   89       | OP_EQ
   90       | OP_GE
   91       | OP_GT
   92       | OP_NE

   93 expr: expr add_op term
   94     | term

   95 add_op: OP_ADD
   96       | OP_SUB

   97 term: term mul_op factor
   98     | factor

   99 mul_op: OP_MUL
  100       | OP_DIV
  101       | OP_MOD

  102 factor: var_ref
  103       | OP_SUB var_ref
  104       | MK_LPAREN boolean_expr MK_RPAREN
  105       | OP_SUB MK_LPAREN boolean_expr MK_RPAREN
  106       | ID MK_LPAREN opt_boolean_expr_list MK_RPAREN
  107       | OP_SUB ID MK_LPAREN opt_boolean_expr_list MK_RPAREN
  108       | literal_const

  109 var_ref: ID
  110        | var_ref dim

  111 dim: MK_LB boolean_expr MK_RB


Terminals, with rules where they appear

$end (0) 0
error (256)
ARRAY (258) 43
BEG (259) 54
BOOLEAN (260) 41
DEF (261)
DO (262) 68 72
ELSE (263) 64
END (264) 2 27 54 64 65 68 72
FALSE (265) 20
FOR (266) 72
INTEGER (267) 39
IF (268) 64 65
OF (269) 43
PRINT (270) 60
READ (271) 61
REAL (272) 40
RETURN (273) 74
STRING (274) 42
THEN (275) 64 65
TO (276) 43 72
TRUE (277) 19
VAR (278) 9 10 11
WHILE (279) 68
OP_ADD (280) 95
OP_SUB (281) 13 15 17 45 96 103 105 107
OP_MUL (282) 99
OP_DIV (283) 100
OP_MOD (284) 101
OP_ASSIGN (285) 59 72
OP_EQ (286) 89
OP_NE (287) 92
OP_GT (288) 91
OP_LT (289) 87
OP_GE (290) 90
OP_LE (291) 88
OP_AND (292) 81
OP_OR (293) 79
OP_NOT (294) 83
MK_COMMA (295) 33 77
MK_COLON (296) 9 10 11 32 35
MK_SEMICOLON (297) 2 9 10 11 27 30 59 60 61 62 74
MK_LPAREN (298) 27 62 104 105 106 107
MK_RPAREN (299) 27 62 104 105 106 107
MK_LB (300) 111
MK_RB (301) 111
ID (302) 2 27 33 34 62 72 106 107 109
INT_CONST (303) 12 13 44 45 73
FLOAT_CONST (304) 14 15
SCIENTIFIC (305) 16 17
STR_CONST (306) 18


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 2, on right: 0
$@1 (54)
    on left: 1, on right: 2
program_body (55)
    on left: 4, on right: 2
$@2 (56)
    on left: 3, on right: 4
opt_decl_list (57)
    on left: 5 6, on right: 4 54
decl_list (58)
    on left: 7 8, on right: 5 7
decl (59)
    on left: 9 10 11, on right: 7 8
literal_const (60)
    on left: 12 13 14 15 16 17 18 19 20, on right: 11 108
opt_func_decl_list (61)
    on left: 21 22, on right: 4
func_decl_list (62)
    on left: 23 24, on right: 21 23
func_decl (63)
    on left: 27, on right: 23 24
$@3 (64)
    on left: 25, on right: 27
$@4 (65)
    on left: 26, on right: 27
opt_param_list (66)
    on left: 28 29, on right: 27
param_list (67)
    on left: 30 31, on right: 28 30
param (68)
    on left: 32, on right: 30 31
id_list (69)
    on left: 33 34, on right: 9 10 11 32 33
ret_type (70)
    on left: 35 36, on right: 27
type (71)
    on left: 37 38, on right: 32 43
scalar_type (72)
    on left: 39 40 41 42, on right: 9 35 37
array_type (73)
    on left: 43, on right: 10 38
array_index (74)
    on left: 44 45, on right: 43
stmt (75)
    on left: 46 47 48 49 50 51 52, on right: 57 58
compound_stmt (76)
    on left: 54, on right: 4 27 46
$@5 (77)
    on left: 53, on right: 54
opt_stmt_list (78)
    on left: 55 56, on right: 54 64 65 68 72
stmt_list (79)
    on left: 57 58, on right: 55 57
simple_stmt (80)
    on left: 59 60 61, on right: 47
proc_call_stmt (81)
    on left: 62, on right: 52
cond_stmt (82)
    on left: 64 65, on right: 48
$@6 (83)
    on left: 63, on right: 64
condition (84)
    on left: 66, on right: 64 65
while_stmt (85)
    on left: 68, on right: 49
$@7 (86)
    on left: 67, on right: 68
condition_while (87)
    on left: 69, on right: 68
for_stmt (88)
    on left: 72, on right: 50
$@8 (89)
    on left: 70, on right: 72
$@9 (90)
    on left: 71, on right: 72
loop_param (91)
    on left: 73, on right: 72
return_stmt (92)
    on left: 74, on right: 51
opt_boolean_expr_list (93)
    on left: 75 76, on right: 62 106 107
boolean_expr_list (94)
    on left: 77 78, on right: 75 77
boolean_expr (95)
    on left: 79 80, on right: 59 60 61 66 69 74 77 78 79 104 105 111
boolean_term (96)
    on left: 81 82, on right: 79 80 81
boolean_factor (97)
    on left: 83 84, on right: 81 82 83
relop_expr (98)
    on left: 85 86, on right: 84
rel_op (99)
    on left: 87 88 89 90 91 92, on right: 85
expr (100)
    on left: 93 94, on right: 85 86 93
add_op (101)
    on left: 95 96, on right: 93
term (102)
    on left: 97 98, on right: 93 94 97
mul_op (103)
    on left: 99 100 101, on right: 97
factor (104)
    on left: 102 103 104 105 106 107 108, on right: 97 98
var_ref (105)
    on left: 109 110, on right: 59 102 103 110
dim (106)
    on left: 111, on right: 110


state 0

    0 $accept: . program $end

    ID  shift, and go to state 1

    program  go to state 2


state 1

    2 program: ID . $@1 MK_SEMICOLON program_body END ID

    $default  reduce using rule 1 ($@1)

    $@1  go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    2 program: ID $@1 . MK_SEMICOLON program_body END ID

    MK_SEMICOLON  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    2 program: ID $@1 MK_SEMICOLON . program_body END ID

    VAR  shift, and go to state 6

    $default  reduce using rule 6 (opt_decl_list)

    program_body   go to state 7
    opt_decl_list  go to state 8
    decl_list      go to state 9
    decl           go to state 10


state 6

    9 decl: VAR . id_list MK_COLON scalar_type MK_SEMICOLON
   10     | VAR . id_list MK_COLON array_type MK_SEMICOLON
   11     | VAR . id_list MK_COLON literal_const MK_SEMICOLON

    ID  shift, and go to state 11

    id_list  go to state 12


state 7

    2 program: ID $@1 MK_SEMICOLON program_body . END ID

    END  shift, and go to state 13


state 8

    4 program_body: opt_decl_list . opt_func_decl_list $@2 compound_stmt

    ID  shift, and go to state 14

    $default  reduce using rule 22 (opt_func_decl_list)

    opt_func_decl_list  go to state 15
    func_decl_list      go to state 16
    func_decl           go to state 17


state 9

    5 opt_decl_list: decl_list .
    7 decl_list: decl_list . decl

    VAR  shift, and go to state 6

    $default  reduce using rule 5 (opt_decl_list)

    decl  go to state 18


state 10

    8 decl_list: decl .

    $default  reduce using rule 8 (decl_list)


state 11

   34 id_list: ID .

    $default  reduce using rule 34 (id_list)


state 12

    9 decl: VAR id_list . MK_COLON scalar_type MK_SEMICOLON
   10     | VAR id_list . MK_COLON array_type MK_SEMICOLON
   11     | VAR id_list . MK_COLON literal_const MK_SEMICOLON
   33 id_list: id_list . MK_COMMA ID

    MK_COMMA  shift, and go to state 19
    MK_COLON  shift, and go to state 20


state 13

    2 program: ID $@1 MK_SEMICOLON program_body END . ID

    ID  shift, and go to state 21


state 14

   27 func_decl: ID . MK_LPAREN opt_param_list $@3 MK_RPAREN ret_type $@4 MK_SEMICOLON compound_stmt END ID

    MK_LPAREN  shift, and go to state 22


state 15

    4 program_body: opt_decl_list opt_func_decl_list . $@2 compound_stmt

    $default  reduce using rule 3 ($@2)

    $@2  go to state 23


state 16

   21 opt_func_decl_list: func_decl_list .
   23 func_decl_list: func_decl_list . func_decl

    ID  shift, and go to state 14

    $default  reduce using rule 21 (opt_func_decl_list)

    func_decl  go to state 24


state 17

   24 func_decl_list: func_decl .

    $default  reduce using rule 24 (func_decl_list)


state 18

    7 decl_list: decl_list decl .

    $default  reduce using rule 7 (decl_list)


state 19

   33 id_list: id_list MK_COMMA . ID

    ID  shift, and go to state 25


state 20

    9 decl: VAR id_list MK_COLON . scalar_type MK_SEMICOLON
   10     | VAR id_list MK_COLON . array_type MK_SEMICOLON
   11     | VAR id_list MK_COLON . literal_const MK_SEMICOLON

    ARRAY        shift, and go to state 26
    BOOLEAN      shift, and go to state 27
    FALSE        shift, and go to state 28
    INTEGER      shift, and go to state 29
    REAL         shift, and go to state 30
    STRING       shift, and go to state 31
    TRUE         shift, and go to state 32
    OP_SUB       shift, and go to state 33
    INT_CONST    shift, and go to state 34
    FLOAT_CONST  shift, and go to state 35
    SCIENTIFIC   shift, and go to state 36
    STR_CONST    shift, and go to state 37

    literal_const  go to state 38
    scalar_type    go to state 39
    array_type     go to state 40


state 21

    2 program: ID $@1 MK_SEMICOLON program_body END ID .

    $default  reduce using rule 2 (program)


state 22

   27 func_decl: ID MK_LPAREN . opt_param_list $@3 MK_RPAREN ret_type $@4 MK_SEMICOLON compound_stmt END ID

    ID  shift, and go to state 11

    $default  reduce using rule 29 (opt_param_list)

    opt_param_list  go to state 41
    param_list      go to state 42
    param           go to state 43
    id_list         go to state 44


state 23

    4 program_body: opt_decl_list opt_func_decl_list $@2 . compound_stmt

    $default  reduce using rule 53 ($@5)

    compound_stmt  go to state 45
    $@5            go to state 46


state 24

   23 func_decl_list: func_decl_list func_decl .

    $default  reduce using rule 23 (func_decl_list)


state 25

   33 id_list: id_list MK_COMMA ID .

    $default  reduce using rule 33 (id_list)


state 26

   43 array_type: ARRAY . array_index TO array_index OF type

    OP_SUB     shift, and go to state 47
    INT_CONST  shift, and go to state 48

    array_index  go to state 49


state 27

   41 scalar_type: BOOLEAN .

    $default  reduce using rule 41 (scalar_type)


state 28

   20 literal_const: FALSE .

    $default  reduce using rule 20 (literal_const)


state 29

   39 scalar_type: INTEGER .

    $default  reduce using rule 39 (scalar_type)


state 30

   40 scalar_type: REAL .

    $default  reduce using rule 40 (scalar_type)


state 31

   42 scalar_type: STRING .

    $default  reduce using rule 42 (scalar_type)


state 32

   19 literal_const: TRUE .

    $default  reduce using rule 19 (literal_const)


state 33

   13 literal_const: OP_SUB . INT_CONST
   15              | OP_SUB . FLOAT_CONST
   17              | OP_SUB . SCIENTIFIC

    INT_CONST    shift, and go to state 50
    FLOAT_CONST  shift, and go to state 51
    SCIENTIFIC   shift, and go to state 52


state 34

   12 literal_const: INT_CONST .

    $default  reduce using rule 12 (literal_const)


state 35

   14 literal_const: FLOAT_CONST .

    $default  reduce using rule 14 (literal_const)


state 36

   16 literal_const: SCIENTIFIC .

    $default  reduce using rule 16 (literal_const)


state 37

   18 literal_const: STR_CONST .

    $default  reduce using rule 18 (literal_const)


state 38

   11 decl: VAR id_list MK_COLON literal_const . MK_SEMICOLON

    MK_SEMICOLON  shift, and go to state 53


state 39

    9 decl: VAR id_list MK_COLON scalar_type . MK_SEMICOLON

    MK_SEMICOLON  shift, and go to state 54


state 40

   10 decl: VAR id_list MK_COLON array_type . MK_SEMICOLON

    MK_SEMICOLON  shift, and go to state 55


state 41

   27 func_decl: ID MK_LPAREN opt_param_list . $@3 MK_RPAREN ret_type $@4 MK_SEMICOLON compound_stmt END ID

    $default  reduce using rule 25 ($@3)

    $@3  go to state 56


state 42

   28 opt_param_list: param_list .
   30 param_list: param_list . MK_SEMICOLON param

    MK_SEMICOLON  shift, and go to state 57

    $default  reduce using rule 28 (opt_param_list)


state 43

   31 param_list: param .

    $default  reduce using rule 31 (param_list)


state 44

   32 param: id_list . MK_COLON type
   33 id_list: id_list . MK_COMMA ID

    MK_COMMA  shift, and go to state 19
    MK_COLON  shift, and go to state 58


state 45

    4 program_body: opt_decl_list opt_func_decl_list $@2 compound_stmt .

    $default  reduce using rule 4 (program_body)


state 46

   54 compound_stmt: $@5 . BEG opt_decl_list opt_stmt_list END

    BEG  shift, and go to state 59


state 47

   45 array_index: OP_SUB . INT_CONST

    INT_CONST  shift, and go to state 60


state 48

   44 array_index: INT_CONST .

    $default  reduce using rule 44 (array_index)


state 49

   43 array_type: ARRAY array_index . TO array_index OF type

    TO  shift, and go to state 61


state 50

   13 literal_const: OP_SUB INT_CONST .

    $default  reduce using rule 13 (literal_const)


state 51

   15 literal_const: OP_SUB FLOAT_CONST .

    $default  reduce using rule 15 (literal_const)


state 52

   17 literal_const: OP_SUB SCIENTIFIC .

    $default  reduce using rule 17 (literal_const)


state 53

   11 decl: VAR id_list MK_COLON literal_const MK_SEMICOLON .

    $default  reduce using rule 11 (decl)


state 54

    9 decl: VAR id_list MK_COLON scalar_type MK_SEMICOLON .

    $default  reduce using rule 9 (decl)


state 55

   10 decl: VAR id_list MK_COLON array_type MK_SEMICOLON .

    $default  reduce using rule 10 (decl)


state 56

   27 func_decl: ID MK_LPAREN opt_param_list $@3 . MK_RPAREN ret_type $@4 MK_SEMICOLON compound_stmt END ID

    MK_RPAREN  shift, and go to state 62


state 57

   30 param_list: param_list MK_SEMICOLON . param

    ID  shift, and go to state 11

    param    go to state 63
    id_list  go to state 44


state 58

   32 param: id_list MK_COLON . type

    ARRAY    shift, and go to state 26
    BOOLEAN  shift, and go to state 27
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31

    type         go to state 64
    scalar_type  go to state 65
    array_type   go to state 66


state 59

   54 compound_stmt: $@5 BEG . opt_decl_list opt_stmt_list END

    VAR  shift, and go to state 6

    $default  reduce using rule 6 (opt_decl_list)

    opt_decl_list  go to state 67
    decl_list      go to state 9
    decl           go to state 10


state 60

   45 array_index: OP_SUB INT_CONST .

    $default  reduce using rule 45 (array_index)


state 61

   43 array_type: ARRAY array_index TO . array_index OF type

    OP_SUB     shift, and go to state 47
    INT_CONST  shift, and go to state 48

    array_index  go to state 68


state 62

   27 func_decl: ID MK_LPAREN opt_param_list $@3 MK_RPAREN . ret_type $@4 MK_SEMICOLON compound_stmt END ID

    MK_COLON  shift, and go to state 69

    $default  reduce using rule 36 (ret_type)

    ret_type  go to state 70


state 63

   30 param_list: param_list MK_SEMICOLON param .

    $default  reduce using rule 30 (param_list)


state 64

   32 param: id_list MK_COLON type .

    $default  reduce using rule 32 (param)


state 65

   37 type: scalar_type .

    $default  reduce using rule 37 (type)


state 66

   38 type: array_type .

    $default  reduce using rule 38 (type)


state 67

   54 compound_stmt: $@5 BEG opt_decl_list . opt_stmt_list END

    FOR     shift, and go to state 71
    IF      shift, and go to state 72
    PRINT   shift, and go to state 73
    READ    shift, and go to state 74
    RETURN  shift, and go to state 75
    WHILE   shift, and go to state 76
    ID      shift, and go to state 77

    END       reduce using rule 56 (opt_stmt_list)
    $default  reduce using rule 53 ($@5)

    stmt            go to state 78
    compound_stmt   go to state 79
    $@5             go to state 46
    opt_stmt_list   go to state 80
    stmt_list       go to state 81
    simple_stmt     go to state 82
    proc_call_stmt  go to state 83
    cond_stmt       go to state 84
    while_stmt      go to state 85
    for_stmt        go to state 86
    return_stmt     go to state 87
    var_ref         go to state 88


state 68

   43 array_type: ARRAY array_index TO array_index . OF type

    OF  shift, and go to state 89


state 69

   35 ret_type: MK_COLON . scalar_type

    BOOLEAN  shift, and go to state 27
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31

    scalar_type  go to state 90


state 70

   27 func_decl: ID MK_LPAREN opt_param_list $@3 MK_RPAREN ret_type . $@4 MK_SEMICOLON compound_stmt END ID

    $default  reduce using rule 26 ($@4)

    $@4  go to state 91


state 71

   72 for_stmt: FOR . ID $@8 OP_ASSIGN loop_param TO loop_param $@9 DO opt_stmt_list END DO

    ID  shift, and go to state 92


state 72

   64 cond_stmt: IF . condition THEN opt_stmt_list ELSE $@6 opt_stmt_list END IF
   65          | IF . condition THEN opt_stmt_list END IF

    FALSE        shift, and go to state 28
    TRUE         shift, and go to state 32
    OP_SUB       shift, and go to state 93
    OP_NOT       shift, and go to state 94
    MK_LPAREN    shift, and go to state 95
    ID           shift, and go to state 96
    INT_CONST    shift, and go to state 34
    FLOAT_CONST  shift, and go to state 35
    SCIENTIFIC   shift, and go to state 36
    STR_CONST    shift, and go to state 37

    literal_const   go to state 97
    condition       go to state 98
    boolean_expr    go to state 99
    boolean_term    go to state 100
    boolean_factor  go to state 101
    relop_expr      go to state 102
    expr            go to state 103
    term            go to state 104
    factor          go to state 105
    var_ref         go to state 106


state 73

   60 simple_stmt: PRINT . boolean_expr MK_SEMICOLON

    FALSE        shift, and go to state 28
    TRUE         shift, and go to state 32
    OP_SUB       shift, and go to state 93
    OP_NOT       shift, and go to state 94
    MK_LPAREN    shift, and go to state 95
    ID           shift, and go to state 96
    INT_CONST    shift, and go to state 34
    FLOAT_CONST  shift, and go to state 35
    SCIENTIFIC   shift, and go to state 36
    STR_CONST    shift, and go to state 37

    literal_const   go to state 97
    boolean_expr    go to state 107
    boolean_term    go to state 100
    boolean_factor  go to state 101
    relop_expr      go to state 102
    expr            go to state 103
    term            go to state 104
    factor          go to state 105
    var_ref         go to state 106


state 74

   61 simple_stmt: READ . boolean_expr MK_SEMICOLON

    FALSE        shift, and go to state 28
    TRUE         shift, and go to state 32
    OP_SUB       shift, and go to state 93
    OP_NOT       shift, and go to state 94
    MK_LPAREN    shift, and go to state 95
    ID           shift, and go to state 96
    INT_CONST    shift, and go to state 34
    FLOAT_CONST  shift, and go to state 35
    SCIENTIFIC   shift, and go to state 36
    STR_CONST    shift, and go to state 37

    literal_const   go to state 97
    boolean_expr    go to state 108
    boolean_term    go to state 100
    boolean_factor  go to state 101
    relop_expr      go to state 102
    expr            go to state 103
    term            go to state 104
    factor          go to state 105
    var_ref         go to state 106


state 75

   74 return_stmt: RETURN . boolean_expr MK_SEMICOLON

    FALSE        shift, and go to state 28
    TRUE         shift, and go to state 32
    OP_SUB       shift, and go to state 93
    OP_NOT       shift, and go to state 94
    MK_LPAREN    shift, and go to state 95
    ID           shift, and go to state 96
    INT_CONST    shift, and go to state 34
    FLOAT_CONST  shift, and go to state 35
    SCIENTIFIC   shift, and go to state 36
    STR_CONST    shift, and go to state 37

    literal_const   go to state 97
    boolean_expr    go to state 109
    boolean_term    go to state 100
    boolean_factor  go to state 101
    relop_expr      go to state 102
    expr            go to state 103
    term            go to state 104
    factor          go to state 105
    var_ref         go to state 106


state 76

   68 while_stmt: WHILE . condition_while DO opt_stmt_list $@7 END DO

    FALSE        shift, and go to state 28
    TRUE         shift, and go to state 32
    OP_SUB       shift, and go to state 93
    OP_NOT       shift, and go to state 94
    MK_LPAREN    shift, and go to state 95
    ID           shift, and go to state 96
    INT_CONST    shift, and go to state 34
    FLOAT_CONST  shift, and go to state 35
    SCIENTIFIC   shift, and go to state 36
    STR_CONST    shift, and go to state 37

    literal_const    go to state 97
    condition_while  go to state 110
    boolean_expr     go to state 111
    boolean_term     go to state 100
    boolean_factor   go to state 101
    relop_expr       go to state 102
    expr             go to state 103
    term             go to state 104
    factor           go to state 105
    var_ref          go to state 106


state 77

   62 proc_call_stmt: ID . MK_LPAREN opt_boolean_expr_list MK_RPAREN MK_SEMICOLON
  109 var_ref: ID .

    MK_LPAREN  shift, and go to state 112

    $default  reduce using rule 109 (var_ref)


state 78

   58 stmt_list: stmt .

    $default  reduce using rule 58 (stmt_list)


state 79

   46 stmt: compound_stmt .

    $default  reduce using rule 46 (stmt)


state 80

   54 compound_stmt: $@5 BEG opt_decl_list opt_stmt_list . END

    END  shift, and go to state 113


state 81

   55 opt_stmt_list: stmt_list .
   57 stmt_list: stmt_list . stmt

    FOR     shift, and go to state 71
    IF      shift, and go to state 72
    PRINT   shift, and go to state 73
    READ    shift, and go to state 74
    RETURN  shift, and go to state 75
    WHILE   shift, and go to state 76
    ID      shift, and go to state 77

    BEG       reduce using rule 53 ($@5)
    $default  reduce using rule 55 (opt_stmt_list)

    stmt            go to state 114
    compound_stmt   go to state 79
    $@5             go to state 46
    simple_stmt     go to state 82
    proc_call_stmt  go to state 83
    cond_stmt       go to state 84
    while_stmt      go to state 85
    for_stmt        go to state 86
    return_stmt     go to state 87
    var_ref         go to state 88


state 82

   47 stmt: simple_stmt .

    $default  reduce using rule 47 (stmt)


state 83

   52 stmt: proc_call_stmt .

    $default  reduce using rule 52 (stmt)


state 84

   48 stmt: cond_stmt .

    $default  reduce using rule 48 (stmt)


state 85

   49 stmt: while_stmt .

    $default  reduce using rule 49 (stmt)


state 86

   50 stmt: for_stmt .

    $default  reduce using rule 50 (stmt)


state 87

   51 stmt: return_stmt .

    $default  reduce using rule 51 (stmt)


state 88

   59 simple_stmt: var_ref . OP_ASSIGN boolean_expr MK_SEMICOLON
  110 var_ref: var_ref . dim

    OP_ASSIGN  shift, and go to state 115
    MK_LB      shift, and go to state 116

    dim  go to state 117


state 89

   43 array_type: ARRAY array_index TO array_index OF . type

    ARRAY    shift, and go to state 26
    BOOLEAN  shift, and go to state 27
    INTEGER  shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31

    type         go to state 118
    scalar_type  go to state 65
    array_type   go to state 66


state 90

   35 ret_type: MK_COLON scalar_type .

    $default  reduce using rule 35 (ret_type)


state 91

   27 func_decl: ID MK_LPAREN opt_param_list $@3 MK_RPAREN ret_type $@4 . MK_SEMICOLON compound_stmt END ID

    MK_SEMICOLON  shift, and go to state 119


state 92

   72 for_stmt: FOR ID . $@8 OP_ASSIGN loop_param TO loop_param $@9 DO opt_stmt_list END DO

    $default  reduce using rule 70 ($@8)

    $@8  go to state 120


state 93

   13 literal_const: OP_SUB . INT_CONST
   15              | OP_SUB . FLOAT_CONST
   17              | OP_SUB . SCIENTIFIC
  103 factor: OP_SUB . var_ref
  105       | OP_SUB . MK_LPAREN boolean_expr MK_RPAREN
  107       | OP_SUB . ID MK_LPAREN opt_boolean_expr_list MK_RPAREN

    MK_LPAREN    shift, and go to state 121
    ID           shift, and go to state 122
    INT_CONST    shift, and go to state 50
    FLOAT_CONST  shift, and go to state 51
    SCIENTIFIC   shift, and go to state 52

    var_ref  go to state 123


state 94

   83 boolean_factor: OP_NOT . boolean_factor

    FALSE        shift, and go to state 28
    TRUE         shift, and go to state 32
    OP_SUB       shift, and go to state 93
    OP_NOT       shift, and go to state 94
    MK_LPAREN    shift, and go to state 95
    ID           shift, and go to state 96
    INT_CONST    shift, and go to state 34
    FLOAT_CONST  shift, and go to state 35
    SCIENTIFIC   shift, and go to state 36
    STR_CONST    shift, and go to state 37

    literal_const   go to state 97
    boolean_factor  go to state 124
    relop_expr      go to state 102
    expr            go to state 103
    term            go to state 104
    factor          go to state 105
    var_ref         go to state 106


state 95

  104 factor: MK_LPAREN . boolean_expr MK_RPAREN

    FALSE        shift, and go to state 28
    TRUE         shift, and go to state 32
    OP_SUB       shift, and go to state 93
    OP_NOT       shift, and go to state 94
    MK_LPAREN    shift, and go to state 95
    ID           shift, and go to state 96
    INT_CONST    shift, and go to state 34
    FLOAT_CONST  shift, and go to state 35
    SCIENTIFIC   shift, and go to state 36
    STR_CONST    shift, and go to state 37

    literal_const   go to state 97
    boolean_expr    go to state 125
    boolean_term    go to state 100
    boolean_factor  go to state 101
    relop_expr      go to state 102
    expr            go to state 103
    term            go to state 104
    factor          go to state 105
    var_ref         go to state 106


state 96

  106 factor: ID . MK_LPAREN opt_boolean_expr_list MK_RPAREN
  109 var_ref: ID .

    MK_LPAREN  shift, and go to state 126

    $default  reduce using rule 109 (var_ref)


state 97

  108 factor: literal_const .

    $default  reduce using rule 108 (factor)


state 98

   64 cond_stmt: IF condition . THEN opt_stmt_list ELSE $@6 opt_stmt_list END IF
   65          | IF condition . THEN opt_stmt_list END IF

    THEN  shift, and go to state 127


state 99

   66 condition: boolean_expr .
   79 boolean_expr: boolean_expr . OP_OR boolean_term

    OP_OR  shift, and go to state 128

    $default  reduce using rule 66 (condition)


state 100

   80 boolean_expr: boolean_term .
   81 boolean_term: boolean_term . OP_AND boolean_factor

    OP_AND  shift, and go to state 129

    $default  reduce using rule 80 (boolean_expr)


state 101

   82 boolean_term: boolean_factor .

    $default  reduce using rule 82 (boolean_term)


state 102

   84 boolean_factor: relop_expr .

    $default  reduce using rule 84 (boolean_factor)


state 103

   85 relop_expr: expr . rel_op expr
   86           | expr .
   93 expr: expr . add_op term

    OP_ADD  shift, and go to state 130
    OP_SUB  shift, and go to state 131
    OP_EQ   shift, and go to state 132
    OP_NE   shift, and go to state 133
    OP_GT   shift, and go to state 134
    OP_LT   shift, and go to state 135
    OP_GE   shift, and go to state 136
    OP_LE   shift, and go to state 137

    $default  reduce using rule 86 (relop_expr)

    rel_op  go to state 138
    add_op  go to state 139


state 104

   94 expr: term .
   97 term: term . mul_op factor

    OP_MUL  shift, and go to state 140
    OP_DIV  shift, and go to state 141
    OP_MOD  shift, and go to state 142

    $default  reduce using rule 94 (expr)

    mul_op  go to state 143


state 105

   98 term: factor .

    $default  reduce using rule 98 (term)


state 106

  102 factor: var_ref .
  110 var_ref: var_ref . dim

    MK_LB  shift, and go to state 116

    $default  reduce using rule 102 (factor)

    dim  go to state 117


state 107

   60 simple_stmt: PRINT boolean_expr . MK_SEMICOLON
   79 boolean_expr: boolean_expr . OP_OR boolean_term

    OP_OR         shift, and go to state 128
    MK_SEMICOLON  shift, and go to state 144


state 108

   61 simple_stmt: READ boolean_expr . MK_SEMICOLON
   79 boolean_expr: boolean_expr . OP_OR boolean_term

    OP_OR         shift, and go to state 128
    MK_SEMICOLON  shift, and go to state 145


state 109

   74 return_stmt: RETURN boolean_expr . MK_SEMICOLON
   79 boolean_expr: boolean_expr . OP_OR boolean_term

    OP_OR         shift, and go to state 128
    MK_SEMICOLON  shift, and go to state 146


state 110

   68 while_stmt: WHILE condition_while . DO opt_stmt_list $@7 END DO

    DO  shift, and go to state 147


state 111

   69 condition_while: boolean_expr .
   79 boolean_expr: boolean_expr . OP_OR boolean_term

    OP_OR  shift, and go to state 128

    $default  reduce using rule 69 (condition_while)


state 112

   62 proc_call_stmt: ID MK_LPAREN . opt_boolean_expr_list MK_RPAREN MK_SEMICOLON

    FALSE        shift, and go to state 28
    TRUE         shift, and go to state 32
    OP_SUB       shift, and go to state 93
    OP_NOT       shift, and go to state 94
    MK_LPAREN    shift, and go to state 95
    ID           shift, and go to state 96
    INT_CONST    shift, and go to state 34
    FLOAT_CONST  shift, and go to state 35
    SCIENTIFIC   shift, and go to state 36
    STR_CONST    shift, and go to state 37

    $default  reduce using rule 76 (opt_boolean_expr_list)

    literal_const          go to state 97
    opt_boolean_expr_list  go to state 148
    boolean_expr_list      go to state 149
    boolean_expr           go to state 150
    boolean_term           go to state 100
    boolean_factor         go to state 101
    relop_expr             go to state 102
    expr                   go to state 103
    term                   go to state 104
    factor                 go to state 105
    var_ref                go to state 106


state 113

   54 compound_stmt: $@5 BEG opt_decl_list opt_stmt_list END .

    $default  reduce using rule 54 (compound_stmt)


state 114

   57 stmt_list: stmt_list stmt .

    $default  reduce using rule 57 (stmt_list)


state 115

   59 simple_stmt: var_ref OP_ASSIGN . boolean_expr MK_SEMICOLON
